--- a/packages/graph-endpoints-beta/turbo.json
+++ b/packages/graph-endpoints-beta/turbo.json
@@ -3,9 +3,9 @@
   "tasks": {
     "build": {
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "cache": false,
-      "dependsOn": ["@microsoft/teams.common#build", "@microsoft/teams.graph-tools#build", "@microsoft/teams.graph-endpoints#build"]
+      "outputs": ["dist/**", "!dist/cache/**"],
+      "cache": true,
+      "dependsOn": ["@microsoft/teams.graph-tools#build"]
     }
   }
 }
