--- a/packages/graph/turbo.json
+++ b/packages/graph/turbo.json
@@ -3,8 +3,8 @@
   "tasks": {
     "build": {
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"],
-      "cache": false,
+      "outputs": ["dist/**", "!dist/cache/**"],
+      "cache": true,
       "dependsOn": ["@microsoft/teams.common#build"]
     }
   }
