--- a/external/a2a/package.json
+++ b/external/a2a/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "@microsoft/teams.config": "2.0.0-preview.9",
     "@types/jest": "^29.5.12",
+    "@types/lodash.camelcase": "^4.3.9",
     "@types/node": "^22.0.2",
     "jest": "^29.7.0",
     "rimraf": "^6.0.1",
@@ -43,6 +44,6 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "camelcase": "^8.0.0"
+    "lodash.camelcase": "^4.3.0"
   }
 }
