Migrate a2a server to sdk v 0.3.0 (#337)
1. Migrates A2A plugin to V0.3.0. This version uses the [official
JSsdk](https://github.com/a2aproject/a2a-js) internally, and provides a
helpful integration with your existing Teams AI project.
Features:
1. Integrates with the existing Teams AI server
2. Provides a familiar pattern to receive messages for an a2a message
(accessible via `app.event('a2a:message', async ({respond}) => { })`).
3. Optionally, you may provide your own AgentExecutor that the official
SDK provides as well.




#### PR Dependency Tree


* **PR #337** 👈
  * **PR #338**

This tree was auto-generated by
[Charcoal](https://github.com/danerwilliams/charcoal)

--- a/external/a2a/package.json
+++ b/external/a2a/package.json
@@ -29,6 +29,7 @@
     "lint:fix": "npx eslint --fix"
   },
   "peerDependencies": {
+    "@a2a-js/sdk": "^0.3.4",
     "@microsoft/teams.ai": "2.0.0-preview.11",
     "@microsoft/teams.apps": "2.0.0-preview.11",
     "@microsoft/teams.common": "2.0.0-preview.11"
