TS Changes for atk.basic in azure and atk.oauth  (#354)
skip-test-verification

1. Oauth in Typescript - verified in local and dev
2. Basic in typescript Dev env (switched from managed identity back to
client id and secret - single tenant)
For managed identity we would have had to update each template to use
azure identity
3.  Remove conversion of port to number as ports are strings in dev env

---------

Co-authored-by: Mehak Bindra <mehakbindra@microsoft.com>
Co-authored-by: heyitsaamir <ajawaid191@gmail.com>

--- a/packages/cli/configs/atk/oauth/python/.vscode/launch.json
+++ b/packages/cli/configs/atk/oauth/python/.vscode/launch.json
@@ -49,6 +49,7 @@
         "name": "Start",
         "type": "debugpy",
         "request": "launch",
+        "python": "${workspaceFolder}/.venv/bin/python",
         "program": "${workspaceFolder}/src/main.py",
         "console": "integratedTerminal"
     }
