--- a/packages/botbuilder/package.json
+++ b/packages/botbuilder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teams.botbuilder",
-  "version": "2.0.0-preview.12",
+  "version": "2.0.0",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -38,14 +38,14 @@
     "test": "npx jest"
   },
   "peerDependencies": {
-    "@microsoft/teams.api": "2.0.0-preview.12",
-    "@microsoft/teams.apps": "2.0.0-preview.12",
-    "@microsoft/teams.common": "2.0.0-preview.12",
-    "@microsoft/teams.graph": "2.0.0-preview.12",
+    "@microsoft/teams.api": "2.0.0",
+    "@microsoft/teams.apps": "2.0.0",
+    "@microsoft/teams.common": "2.0.0",
+    "@microsoft/teams.graph": "2.0.0",
     "botbuilder": "4.23.1"
   },
   "devDependencies": {
-    "@microsoft/teams.config": "2.0.0-preview.12",
+    "@microsoft/teams.config": "2.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.0.2",
     "jest": "^29.7.0",
