--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teams.config",
-  "version": "2.0.0-preview.12",
+  "version": "2.0.0",
   "private": true,
   "license": "MIT",
   "homepage": "https://github.com/microsoft/teams.ts",
